--- a/Integrated Presenter/App.xaml
+++ b/Integrated Presenter/App.xaml
@@ -156,6 +156,8 @@
             <Setter Property="Width" Value="80"></Setter>
             <Setter Property="Height" Value="60"></Setter>
             <Setter Property="Margin" Value="5"></Setter>
+            <Setter Property="IsTabStop" Value="False"></Setter>
+            <Setter Property="Focusable" Value="False"></Setter>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate>
@@ -180,6 +182,8 @@
             <Setter Property="Width" Value="80"></Setter>
             <Setter Property="Height" Value="60"></Setter>
             <Setter Property="Margin" Value="5"></Setter>
+            <Setter Property="IsTabStop" Value="False"></Setter>
+            <Setter Property="Focusable" Value="False"></Setter>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate>
