--- a/Integrated Presenter/BMDSwitcher/Mock/MockMultiviewerWindow.xaml
+++ b/Integrated Presenter/BMDSwitcher/Mock/MockMultiviewerWindow.xaml
@@ -6,101 +6,105 @@
         xmlns:local="clr-namespace:Integrated_Presenter.BMDSwitcher.Mock"
         mc:Ignorable="d"
         Title="MockMultiviewer" Height="1000" Width="1750">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="2*"></RowDefinition>
-            <RowDefinition Height="1*"></RowDefinition>
-            <RowDefinition Height="1*"></RowDefinition>
-        </Grid.RowDefinitions>
+    <Grid Background="Black">
+        <Viewbox Stretch="Uniform">
+            <Grid Width="2560" Height="1440">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="2*"></RowDefinition>
+                    <RowDefinition Height="1*"></RowDefinition>
+                    <RowDefinition Height="1*"></RowDefinition>
+                </Grid.RowDefinitions>
 
-        <Border Background="Black" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" BorderBrush="Green" BorderThickness="2,2,2,2">
-            <Grid>
-                <Image Name="ImgPreset" Panel.ZIndex="2"></Image>
-                <Image Name="ImgPreset_pgmbgnd" Panel.ZIndex="1"></Image>
-                <Viewbox Panel.ZIndex="3">
-                    <Image Name="ImgPresetLowerThird" Stretch="None">
-                        <Image.RenderTransform>
-                            <TranslateTransform X="0" Y="0"></TranslateTransform>
-                        </Image.RenderTransform>
-                        <Image.Clip>
-                            <RectangleGeometry Rect="0 816 1920 1296"></RectangleGeometry>
-                        </Image.Clip>
-                    </Image>
-                </Viewbox>
-                <Viewbox Panel.ZIndex="4">
-                    <Image Name="ImgPresetSplit" Stretch="None">
-                        <Image.RenderTransform>
-                            <TranslateTransform X="0" Y="0"></TranslateTransform>
-                        </Image.RenderTransform>
-                        <Image.Clip>
-                            <RectangleGeometry Rect="960 0 1920 1080"></RectangleGeometry>
-                        </Image.Clip>
-                    </Image>
-                </Viewbox>
+                <Border Background="Black" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" BorderBrush="WhiteSmoke" BorderThickness="5">
+                    <Grid>
+                        <Image Name="ImgPreset" Panel.ZIndex="2"></Image>
+                        <Image Name="ImgPreset_pgmbgnd" Panel.ZIndex="1"></Image>
+                        <Viewbox Panel.ZIndex="3">
+                            <Image Name="ImgPresetLowerThird" Stretch="None" Opacity="0.63">
+                                <Image.RenderTransform>
+                                    <TranslateTransform X="0" Y="0"></TranslateTransform>
+                                </Image.RenderTransform>
+                                <Image.Clip>
+                                    <RectangleGeometry Rect="0 864 1920 1296"></RectangleGeometry>
+                                </Image.Clip>
+                            </Image>
+                        </Viewbox>
+                        <Viewbox Panel.ZIndex="4">
+                            <Image Name="ImgPresetSplit" Stretch="None">
+                                <Image.RenderTransform>
+                                    <TranslateTransform X="0" Y="0"></TranslateTransform>
+                                </Image.RenderTransform>
+                                <Image.Clip>
+                                    <RectangleGeometry Rect="960 0 1920 1080"></RectangleGeometry>
+                                </Image.Clip>
+                            </Image>
+                        </Viewbox>
+                    </Grid>
+                </Border>
+                <Border Background="Black" Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" BorderBrush="WhiteSmoke" BorderThickness="5">
+                    <Grid>
+                        <Image Name="ImgProgram" Grid.RowSpan="2" Panel.ZIndex="2"></Image>
+                        <Image Name="ImgProgram_presetbgnd" Grid.RowSpan="2" Panel.ZIndex="1"></Image>
+                        <Viewbox Panel.ZIndex="3">
+                            <Image Name="ImgProgramLowerThird" Stretch="None" Opacity="0.63">
+                                <Image.RenderTransform>
+                                    <TranslateTransform X="0" Y="0"></TranslateTransform>
+                                </Image.RenderTransform>
+                                <Image.Clip>
+                                    <RectangleGeometry Rect="0 864 1920 1296"></RectangleGeometry>
+                                </Image.Clip>
+                            </Image>
+                        </Viewbox>
+                        <Viewbox Panel.ZIndex="4">
+                            <Image Name="ImgProgramSplit" Stretch="None">
+                                <Image.RenderTransform>
+                                    <TranslateTransform X="0" Y="0"></TranslateTransform>
+                                </Image.RenderTransform>
+                                <Image.Clip>
+                                    <RectangleGeometry Rect="960 0 1920 1080"></RectangleGeometry>
+                                </Image.Clip>
+                            </Image>
+                        </Viewbox>
+                        <Rectangle Name="ProgramFTB" Visibility="Hidden" Panel.ZIndex="1000">
+                            <Rectangle.Fill>Black</Rectangle.Fill>
+                        </Rectangle>
+                    </Grid>
+                </Border>
+
+
+                <Border Background="Black" Grid.Row="1" Grid.Column="0" BorderBrush="Gray" BorderThickness="2,2,2,2">
+                    <Image x:Name="ImgPulpit" Grid.ColumnSpan="1" Source="/BMDSwitcher/Mock/Images/leftshot.png"></Image>
+                </Border>
+                <Border Background="Black" Grid.Row="1" Grid.Column="1" BorderBrush="Gray" BorderThickness="2,2,2,2">
+                    <Image Name="ImgCenter" Grid.ColumnSpan="1" Source="/BMDSwitcher/Mock/Images/centershot.png"></Image>
+                </Border>
+                <Border Background="Black" Grid.Row="1" Grid.Column="2" BorderBrush="Gray" BorderThickness="2,2,2,2">
+                    <Image Name="Imgcenter" Grid.ColumnSpan="1" Source="/BMDSwitcher/Mock/Images/rightshot.png"></Image>
+                </Border>
+                <Border Background="Black" Grid.Row="1" Grid.Column="3" BorderBrush="Gray" BorderThickness="2,2,2,2">
+                    <Image Name="ImgOrgan" Grid.ColumnSpan="1" Source="/BMDSwitcher/Mock/Images/organshot.png"></Image>
+                </Border>
+                <Border Background="Black" Grid.Row="2" Grid.Column="0" BorderBrush="Gray" BorderThickness="2,2,2,2">
+                    <Image Name="ImgSlide" Grid.ColumnSpan="1" Source="/BMDSwitcher/Mock/Images/black.png"></Image>
+                </Border>
+                <Border Background="Black" Grid.Row="2" Grid.Column="1" BorderBrush="Gray" BorderThickness="2,2,2,2">
+                    <Image Grid.ColumnSpan="1"></Image>
+                </Border>
+                <Border Background="Black" Grid.Row="2" Grid.Column="2" BorderBrush="Gray" BorderThickness="2,2,2,2">
+                    <Image Grid.ColumnSpan="1"></Image>
+                </Border>
+                <Border Background="Black" Grid.Row="2" Grid.Column="3" BorderBrush="Gray" BorderThickness="2,2,2,2">
+                    <Image Grid.ColumnSpan="1"></Image>
+                </Border>
 
             </Grid>
-        </Border>
-        <Border Background="Black" Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" BorderBrush="Red" BorderThickness="2,2,2,2">
-            <Grid>
-                <Image Name="ImgProgram" Grid.RowSpan="2" Panel.ZIndex="2"></Image>
-                <Image Name="ImgProgram_presetbgnd" Grid.RowSpan="2" Panel.ZIndex="1"></Image>
-                <Viewbox Panel.ZIndex="3">
-                    <Image Name="ImgProgramLowerThird" Stretch="None">
-                        <Image.RenderTransform>
-                            <TranslateTransform X="0" Y="0"></TranslateTransform>
-                        </Image.RenderTransform>
-                        <Image.Clip>
-                            <RectangleGeometry Rect="0 816 1920 1296"></RectangleGeometry>
-                        </Image.Clip>
-                    </Image>
-                </Viewbox>
-                <Viewbox Panel.ZIndex="4">
-                    <Image Name="ImgProgramSplit" Stretch="None">
-                        <Image.RenderTransform>
-                            <TranslateTransform X="0" Y="0"></TranslateTransform>
-                        </Image.RenderTransform>
-                        <Image.Clip>
-                            <RectangleGeometry Rect="960 0 1920 1080"></RectangleGeometry>
-                        </Image.Clip>
-                    </Image>
-                </Viewbox>
-                <Rectangle Name="ProgramFTB" Visibility="Hidden" Panel.ZIndex="1000">
-                    <Rectangle.Fill>Black</Rectangle.Fill>
-                </Rectangle>
-            </Grid>
-        </Border>
-
-
-        <Border Background="Black" Grid.Row="1" Grid.Column="0" BorderBrush="Gray" BorderThickness="2,2,2,2">
-            <Image x:Name="ImgPulpit" Grid.ColumnSpan="1" Source="/BMDSwitcher/Mock/Images/leftcam.png"></Image>
-        </Border>
-        <Border Background="Black" Grid.Row="1" Grid.Column="1" BorderBrush="Gray" BorderThickness="2,2,2,2">
-            <Image Name="ImgCenter" Grid.ColumnSpan="1" Source="/BMDSwitcher/Mock/Images/centercam.png"></Image>
-        </Border>
-        <Border Background="Black" Grid.Row="1" Grid.Column="2" BorderBrush="Gray" BorderThickness="2,2,2,2">
-            <Image Name="Imgcenter" Grid.ColumnSpan="1" Source="/BMDSwitcher/Mock/Images/rightcam.png"></Image>
-        </Border>
-        <Border Background="Black" Grid.Row="1" Grid.Column="3" BorderBrush="Gray" BorderThickness="2,2,2,2">
-            <Image Name="ImgOrgan" Grid.ColumnSpan="1" Source="/BMDSwitcher/Mock/Images/organcam.png"></Image>
-        </Border>
-        <Border Background="Black" Grid.Row="2" Grid.Column="0" BorderBrush="Gray" BorderThickness="2,2,2,2">
-            <Image Name="ImgSlide" Grid.ColumnSpan="1" Source="/BMDSwitcher/Mock/Images/black.png"></Image>
-        </Border>
-        <Border Background="Black" Grid.Row="2" Grid.Column="1" BorderBrush="Gray" BorderThickness="2,2,2,2">
-            <Image Grid.ColumnSpan="1"></Image>
-        </Border>
-        <Border Background="Black" Grid.Row="2" Grid.Column="2" BorderBrush="Gray" BorderThickness="2,2,2,2">
-            <Image Grid.ColumnSpan="1"></Image>
-        </Border>
-        <Border Background="Black" Grid.Row="2" Grid.Column="3" BorderBrush="Gray" BorderThickness="2,2,2,2">
-            <Image Grid.ColumnSpan="1"></Image>
-        </Border>
+        </Viewbox>
 
     </Grid>
 </Window>
