--- a/SlideCreater/ViewControls/AssetItemControl.xaml
+++ b/SlideCreater/ViewControls/AssetItemControl.xaml
@@ -21,7 +21,7 @@
                                 <TextBlock Margin="5,5,5,5" HorizontalAlignment="Center" VerticalAlignment="Center" Opacity="0.4">Unloaded Asset</TextBlock>
                             </Viewbox>
                             <Image Name="ImgAsset" Stretch="Uniform"></Image>
-                            <MediaElement LoadedBehavior="Stop" Name="VideoAsset"></MediaElement>
+                            <MediaElement LoadedBehavior="Stop" Name="VideoAsset" StretchDirection="DownOnly" Stretch="Uniform"></MediaElement>
                         </Grid>
                     </Border>
                     <Grid Grid.Column="1">
