--- a/SlideCreater/ViewControls/SlideContentPresenter.xaml
+++ b/SlideCreater/ViewControls/SlideContentPresenter.xaml
@@ -8,10 +8,9 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Border Name="SelectionBorder" Margin="5,5,5,5">
-            <Viewbox Stretch="Uniform" UIElement.PreviewMouseDown="OnControlMouseDown">
+            <Viewbox Stretch="Uniform">
                 <Border>
                     <Grid Height="1080" Width="1920">
-                        <Rectangle Fill="{StaticResource BackgroundTileBrush}"></Rectangle>
                         <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="200" Opacity="0.5">Empty Slide</TextBlock>
                         <Image Name="ImgDisplay"></Image>
                         <MediaElement LoadedBehavior="Manual" Name="VideoDisplay"></MediaElement>
